--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,7 +1,3 @@
-/* html {
-  scroll-behavior: smooth;
-} */
-
 body {
   margin: 0;
 }
@@ -13,16 +9,17 @@ body {
   margin: 0;
   padding: 0;
   background: white;
+  width: 100%;
 }
 
 .opening {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 .portrait {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   animation-duration: 2s;
