--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,5 +1,5 @@
 .Dropdown {
-  width: 100vw;
+  width: 100%;
   position: fixed;
   z-index: 2;
   background: rgb(20,20,20);
